# cycleComputer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: notes.org
include/: lwipopts.h
source/: #main.c#  CMakeLists.txt  btHelper.cpp  btHelper.h  main.cpp
